# data-flows

./: .env.example  .env.template  .gitignore  404.html  CONTRIBUTING.md  Pipfile  README.md  article_text.ipynb  buildspec.yml  buildspec_register_flows.yml  content_metrics.ipynb  docker-compose.yml  index.html  objects.inv  package-lock.json  process.yml  setup.cfg
.aws/: .editorconfig  .eslintrc  (+9 more)
common-utils/: .coveragerc  README.md  common_utils_build.sh  pyproject.toml  pytest.ini  run_pytest.sh
common-utils/.docker/main/: Dockerfile
common-utils/src/common/: __init__.py  settings.py  testing_utils.py
common-utils/src/common/cloud/: aws_utils.py  gcp_utils.py
common-utils/src/common/databases/: snowflake_utils.py  sqlalchemy_utils.py
common-utils/src/common/deployment/: __init__.py  build_image.sh  check_version.py  cli.py  push_image.sh
common-utils/src/common/deployment/worker/: __init__.py  build_image.sh  check_version.py  cli.py  clone_project.sh  common_utils_build.sh  get_prefect_version.sh  push_aws_image.sh
common-utils/tests/: conftest.py
common-utils/tests/cloud/unit/: test_aws_utils.py  test_gcp_utils.py
common-utils/tests/databases/unit/: test_snowflake_utils.py  test_sqlalchemy_utils.py
common-utils/tests/deployment/unit/: testDockerfile1  test_check_version.py  test_cli.py  test_deployment.py  test_deployment_disable_inf.py
common-utils/tests/deployment/worker/test_flows/: example_flow.py  example_legacy_flow.py
common-utils/tests/deployment/worker/unit/: test_check_version_wk.py  test_cli.py  test_cli_wk.py  test_deployment.py  test_deployment_wk.py
common-utils/tests/test_flows/flow_group_1/: example_flow.py  example_no_agent_flow.py
common-utils/tests/test_flows/flow_group_2/: example_flow.py
common-utils/tests/unit/: test_common.py  test_settings.py  test_testing_utils.py
common-utils/tests/unit/deployment/: test_check_version.py  test_cli.py  test_deployment.py  test_deployment_disable_inf.py
data-products/: .coveragerc  .env.example  README.md  mkdocs.yml  prefect.yaml  pyproject.toml  pytest.ini  test.py
data-products/.circleci/: workflows.yml
data-products/.docker/base/: Dockerfile
data-products/.docker/worker/base/: Dockerfile
data-products/docs/: index.md
data-products/docs/flows/sql_etl/: code.md  usage.md
data-products/docs/shared/utils/: code.md
data-products/src/: example.py  example_flow.py  update_pocket_score_data_flow.py
data-products/src/article_text_streaming/: article_text_streaming_flow.py
data-products/src/bq_extract_sf_load/: main_flow.py
data-products/src/bq_to_snowflake/: bq_to_snowflake_flow.py  flow_components.py  mozilla_new_tab_impressions_daily_flow.py  mozilla_new_tab_impressions_hourly.py  mozilla_new_tab_prefs_flow.py  mozilla_new_tab_spoc_fill_flow.py
data-products/src/bq_to_snowflake/cloud/: gcp_utils.py
data-products/src/bq_to_snowflake/config/: bq_to_snowflake.json
data-products/src/bq_to_snowflake/databases/: snowflake_utils.py
data-products/src/braze/: update_flow.py
data-products/src/candidate_sets/: candidate_config.py  corpus_candidate_sets_flow.py  legacy_candidate_sets_flow.py  legacy_curated_candidates_flow.py  legacy_flow.py  legacy_longreads_flow.py
data-products/src/candidate_sets/sql/: recommended_by_recency.sql
data-products/src/data_retention/: delete_miscellaneous_table_rows.sql  delete_raw_user_rows.sql  delete_snapshot_firehose_rows.sql  delete_snowplow_events.sql  delete_stripe_table_rows.sql  deleted_account_emails.sql  deleted_account_users.sql  deleted_accounts_flow.py  development_snowflake_schemas_flow.py  snowflake_development_table_clean_up_flow.py
data-products/src/freestar_revenue_reporting/: freestar_reporting_flow.py
data-products/src/new_tab_recommendations/: aggregate_engagement_flow.py  legacy_curated_feeds_flow.py  main_flow.py
data-products/src/newtab/: slo_newtab_ranking_flow.py
data-products/src/orchestration/: main_orchestration_flow.py
data-products/src/prospecting/: publisher_features.py  publisher_features_flow.py
data-products/src/prospecting/sql/: publisher_features.sql
data-products/src/recommendation_api/: corpus_candidate_sets_flow.py  corpus_item_engagement_flow.py  fx_newtab_aggregate_engagement_flow.py  legacy_candidate_sets_flow.py  user_impressions_flow.py
data-products/src/recommendation_api/sql/: pocket_hits.sql
data-products/src/shared/: async_utils.py  dataclass_utils.py  feature_store.py  iteration_utils.py  offset_utils.py  tasks.py  transform_utils.py  utils.py
data-products/src/shared/api_clients/: sqs.py
data-products/src/shared/models/: corpus_candidate_set_configs.py
data-products/src/snowflake_query_extraction/: snowflake_query_extraction_flow.py
data-products/src/sql_etl/: run_jobs.py  run_jobs_flow.py
data-products/tests/: conftest.py  test.json  utils.py
data-products/tests/article_text_streaming/unit/: test.json  test_article_text_streaming_flow.py
data-products/tests/braze/: test_braze.py
data-products/tests/candidate_sets/: test_legacy_candidate_sets.py
data-products/tests/data_retention/: test_deleted_accounts_flow.py  test_development_snowflake_schemas_flow.py
data-products/tests/freestar_revenue_reporting/unit/: test_freestar_reporting_flow.py
data-products/tests/new_tab_recommendations/: test_aggregate_engagement_flow.py
data-products/tests/newtab/: test_slo_newtab_ranking_flow.py
data-products/tests/orchestration/unit/: test_main_orchestration_flow.py
data-products/tests/recommendation_api/: test_corpus_candidate_sets_flow.py  test_corpus_item_engagement_flow.py  test_legacy_candidate_sets_flow.py  test_user_impressions_flow.py
data-products/tests/shared/: test_feature_store.py  test_utils.py
data-products/tests/shared/unit/: test_feature_store.py  test_offset_utils.py  test_sqs.py  test_utils.py
data-products/tests/snowflake_query_extraction/unit/: test_snowflake_query_extraction_flow.py
data-products/tests/sql_etl/unit/: test_run_jobs_flow.py  test_run_sub_folders.py
data-products/tests/unit/: test_update_pocket_score_data_flow.py
(+293 files in other folders)
