[tool.poetry]
name = "common-utils"
version = "0.2.0"
description = "Shared modules for prefect flow development and deployment"
authors = ["Braun <breyes@mozilla.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "common", from = 'src'}]

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^2.8.2"

[tool.poetry.scripts]
deploy-cli = 'common.deployment.cli:main'

[tool.poetry.group.dev.dependencies]
prefect = "^2.8.2"
pytest = "^7.2.1"
black = "^23.1.0"
pytest-cov = "^4.0.0"
moto = {extras = ["sts"], version = "^4.1.3"}
pytest-env = "^0.8.1"
prefect-aws = {git = "https://github.com/Pocket/prefect-aws.git", rev = "test-prs"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

####################################
### THIS EXISTS FOR UNIT TESTING ###
####################################

[tool.prefect]
flows_folder = "tests/test_flows"

[tool.prefect.envs.base]
python_version = "3.10"
dockerfile_path=".docker/main/Dockerfile"