[tool.poetry]
name = "common-utils"
version = "0.8.0"
description = "Shared modules for prefect flow development and deployment"
authors = ["Braun <breyes@mozilla.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "common", from = 'src'}]

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^2.8.2"
pydantic = "<2"

[tool.poetry.scripts]
deploy-cli = 'common.deployment.cli:main'
df-cli = 'common.deployment.worker.cli:app'

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
pytest-cov = "^4.0.0"
moto = {extras = ["sts"], version = "^4.1.3"}
pytest-env = "^0.8.1"
prefect-aws = {git = "https://github.com/Pocket/prefect-aws.git", rev = "test-prs"}
prefect-snowflake = "^0.26.1"
prefect-gcp = {extras = ["bigquery"], version = "^0.4.1"}
pytest-asyncio = "^0.21.0"
ruff = "^0.0.280"
prefect-sqlalchemy = "^0.2.4"
pandas = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

####################################
### THIS EXISTS FOR UNIT TESTING ###
####################################

[tool.prefect]
flows_folder = "tests/test_flows"

[tool.prefect.envs.base]
python_version = "3.10"
dockerfile_path=".docker/main/Dockerfile"

[tool.prefect.docker.base_v2]
python_version = "3.10"
dockerfile_path=".docker/main/Dockerfile"

[tool.pytest.ini_options]
env = [
    'DF_CONFIG_FLOWS_PATH_OVERRIDE=tests/deployment/worker/test_flows',
    'AWS_DEFAULT_REGION=us-east-1',
    'AWS_ACCOUNT_ID=123456789',
    'POCKET_AWS_SECURITY_GROUPS=["sg-1234"]',
    'POCKET_AWS_SUBNETS=["subnet-1234", "subnet-1234"]',
    'POCKET_PREFECT_FLOW_NAME=common-utils.flow-group-1.flow-1',
    'R:DF_CONFIG_TEST_JSON={"test_name": "test_value"}',
    'DF_CONFIG_TEST_SINGLE_VALUE=test',
    'DF_CONFIG_TEST_NESTED__TEST=test',
    'R:DF_CONFIG_SNOWFLAKE_CREDENTIALS={"role": "test", "account": "test.us-test-1", "user": "test@mozilla.com", "private_key_passphrase": "test", "private_key_path": "tmp/test.p8"}',
    'R:DF_CONFIG_GCP_CREDENTIALS={"service_account_file": "tests/test.json"}',
    'R:DF_CONFIG_GCP_CREDENTIALS_V2={"service_account_file": "tests/test.json"}',
    'DF_CONFIG_SNOWFLAKE_SCHEMA=test',
    'DF_CONFIG_SNOWFLAKE_WAREHOUSE=prefect_wh_test',
    'R:DF_CONFIG_SNOWFLAKE_GCP_STAGE_DATA={"default_name": "DEVELOPMENT.TEST.PREFECT_GCS_STAGE_PARQ_DEV","default_location": "gs://test", "gcs_pocket_shared_name": "DEVELOPMENT.TEST.PREFECT_GCS_STAGE_PARQ_SHARED", "gcs_pocket_shared_location": "gs://test"}',
    'R:DF_CONFIG_SQLALCHEMY_CREDENTIALS={"url": "mysql://scott:tiger@localhost:5432"}'
]