[tool.poetry]
name = "data-products"
version = "0.1.2"
description = "Main project folder for data products prefect flows"
authors = ["Braun <breyes@mozilla.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^2.8.6"
prefect-dask = "^0.2.3"
common-utils = {path = "dist/common_utils-0.1.2-py3-none-any.whl"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-coverage = "^0.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.prefect.envs.base]
python_version = "3.10"
dockerfile_path=".docker/base/Dockerfile"


