[tool.poetry]
name = "data-products"
version = "0.4.0"
description = "Main project folder for data products prefect flows"
authors = ["Braun <breyes@mozilla.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^2.8.6"
prefect-dask = "^0.2.3"
common-utils = {path = "../common-utils", develop = true}
snowflake-connector-python = "<3.0.4"
prefect-snowflake = "^0.26.1"
prefect-gcp = {extras = ["bigquery"], version = "^0.4.2"}
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-coverage = "^0.0"
black = "^23.1.0"
prefect-aws = {git = "https://github.com/Pocket/prefect-aws.git", rev = "test-prs"}
pip = "^23.1.2"
install = "^1.3.5"
pytest-asyncio = "^0.21.0"
pytest-env = "^0.8.1"


[tool.poetry.group.docs.dependencies]
pip = "^23.1.2"
install = "^1.3.5"
mkdocs-material = "^9.1.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.prefect.envs.base]
python_version = "3.10"
dockerfile_path=".docker/base/Dockerfile"

[tool.pytest.ini_options]
pythonpath = "src"
env = [
    'R:DF_CONFIG_SNOWFLAKE_CREDENTIALS={"role": "test", "account": "test.us-test-1", "user": "test@mozilla.com", "private_key_passphrase": "test", "private_key_path": "tmp/test.p8"}',
    'DF_CONFIG_SNOWFLAKE_SCHEMA=test',
    'DF_CONFIG_SNOWFLAKE_WAREHOUSE=prefect_wh_test'
]


